css/login_msg.css
.msg__Box {
  background-color: #2a3647;
  border-radius: 16px;
  width: 90%;
  height: 74px;
  display: none;
  align-items: center;
  justify-content: center;
  opacity: 0;
  position: absolute;
  top: 32px;
  animation: slideInResponsive 2750ms ease-in-out;
}

.msg {
  color: white;
  padding: 16px 8px;
  align-self: center;
  font-weight: 400;
  font-size: 20px;
}

@media (min-width: 768px) {
  .msg__Box {
    width: 400px;
  }
}

@media (max-width: 767px) {
  .msg__Box {
    animation: slideInResponsive 2750ms ease-in-out;
  }
}

@keyframes slideInResponsive {
  0% {
    display: flex;
    transform: translateY(-100px);
    opacity: 0;
  }
  50% {
    transform: translateY(250px);
    opacity: 1;
  }
  100% {
    transform: translateY(500px);
    opacity: 0;
    display: none;
  }
}

